--- a/Mock 2 QT/QT Display/qml.qrc
+++ b/Mock 2 QT/QT Display/qml.qrc
@@ -35,5 +35,6 @@
         <file>assets/thirdRightIcon_red.svg</file>
         <file>assets/FourthRightIcon_red.svg</file>
         <file>FuelGauge.qml</file>
+        <file>EngineGauge.qml</file>
     </qresource>
 </RCC>
