--- a/Mock 2 QT/QT Display/qml.qrc
+++ b/Mock 2 QT/QT Display/qml.qrc
@@ -6,13 +6,13 @@
         <file>assets/Low beam headlights.svg</file>
         <file>assets/Vector 1.svg</file>
         <file>assets/Vector 2.svg</file>
-        <file>assets/FirstRightIcon.svg</file>
-        <file>assets/FourthRightIcon.svg</file>
+        <file>assets/Seatbelt_red.svg</file>
+        <file>assets/ABS_grey.svg</file>
         <file>assets/Lights.svg</file>
         <file>assets/Parking lights.svg</file>
         <file>assets/Rare fog lights.svg</file>
-        <file>assets/SecondRightIcon.svg</file>
-        <file>assets/thirdRightIcon.svg</file>
+        <file>assets/Airbag_grey.svg</file>
+        <file>assets/Parking_grey.svg</file>
         <file>assets/car.png</file>
         <file>assets/fuel.svg</file>
         <file>assets/road.svg</file>
@@ -30,10 +30,10 @@
         <file>assets/Parking_lights_white.svg</file>
         <file>assets/Low_beam_headlights_white.svg</file>
         <file>assets/Rare_fog_lights_red.svg</file>
-        <file>assets/FirstRightIcon_grey.svg</file>
-        <file>assets/SecondRightIcon_red.svg</file>
-        <file>assets/thirdRightIcon_red.svg</file>
-        <file>assets/FourthRightIcon_red.svg</file>
+        <file>assets/Seatbelt_grey.svg</file>
+        <file>assets/Airbag_red.svg</file>
+        <file>assets/Parking_red.svg</file>
+        <file>assets/ABS_red.svg</file>
         <file>FuelGauge.qml</file>
         <file>EngineGauge.qml</file>
         <file>assets/Subtract.svg</file>
